--- a/Project/Client/Views/User/Information.cshtml
+++ b/Project/Client/Views/User/Information.cshtml
@@ -1,4 +1,5 @@
-﻿@model Client.Models.UserDTO.UpdateUser
+﻿@using static Client.Models.Enum.UserEnum.User
+@model Client.Models.UserDTO.UpdateUser
 
 
 <div class="main">
@@ -22,13 +23,24 @@
                         </button>
                     </a>
                 </div>
-                <div class="custom-nav-item">
-                    <a asp-controller="User" asp-action="PasswordSecurity">
-                        <button type="button">
-                            <i class="fas fa-lock"></i> Password and Security
-                        </button>
-                    </a>
-                </div>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    string loginTypeAsString = User.FindFirst("LoginType")?.Value;
+                    UserLoginType loginType;
+                    if (Enum.TryParse(loginTypeAsString, out loginType))
+                    {
+                        if(loginType == UserLoginType.Local)
+                        {              <div class="custom-nav-item">
+                                <a asp-controller="User" asp-action="PasswordSecurity">
+                                    <button type="button">
+                                        <i class="fas fa-lock"></i> Password and Security
+                                    </button>
+                                </a>
+                            </div>
+                        }
+                    }
+
+                }
                 <div class="custom-nav-item">
                     <a asp-controller="User" asp-action="UserDashboard">
                         <button type="button">
